<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainMenu"
        android:title="@string/list" />
    <item
        android:id="@+id/addMenu"
        android:title="@string/add" />
    <item
        android:id="@+id/settingMenu"
        android:title="@string/setting" />
</menu>