...
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/txtCondition"
            android:text="@string/condition"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:text="@string/deposit"
                style="@style/memo_list.title"
                android:background="@drawable/memo_list_title_background_green2"/>
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMemo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="56dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/tableRowMemo"
            app:layout_constraintBottom_toBottomOf="parent"
...
